# OZ-Gov-XRP

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  SECURITY_CHANGELOG.md
src/: lib.rs
src/crypto/: hash.rs  hex.rs
src/foundation/: allocator.rs  config.rs  data.rs  mod.rs  parse.rs  types.rs
src/governance/: counting.rs  governor.rs  mod.rs  signatures.rs  votes.rs
src/tests/: mod.rs
src/tests/crypto/: hex_tests.rs  mod.rs
src/tests/foundation/: data_tests.rs  mod.rs  parse_tests.rs
src/tests/governance/: counting_tests.rs  governor_tests.rs  mod.rs  security_tests.rs  votes_tests.rs
src/tests/timelock/: controller_tests.rs  mod.rs  operations_tests.rs
src/tests/token/: mod.rs  xrp_votes_tests.rs
src/timelock/: controller.rs  mod.rs  operations.rs
src/token/: mod.rs  xrp_votes.rs
