[package]
name = "xrpl-token-dao"
version = "0.1.0"
edition = "2021"
description = "OpenZeppelin-style Governor + Timelock DAO for XRPL WASM smart contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
xrpl-wasm-stdlib = "0.7"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
